test/invalid/index_error.d
//T error: index_error.d:4:10:
//T error: Symbol Base has not been found.

alias A = Base[Index];
A a;
